syntax = "proto3";

package stringproto;

service StringService{

    rpc Upper (UpperRequest) returns (UpperResponse){
    }

    rpc Count (CountRequest) returns (CountResponse) {
    }
}

message UpperRequest {
    string msg = 1;
}

message UpperResponse {
    string msg = 1;
}

message CountRequest{
    string msg = 1;
}

message CountResponse{
    int64 count = 1;
}
